Updated related products liquid to use correct counts for sliders etc.

--- a/sections/related-article-products.liquid
+++ b/sections/related-article-products.liquid
@@ -39,9 +39,9 @@
 {%- endstyle -%}
 
 {%- liquid
-  assign products_to_display = section.settings.collection.all_products_count
-
-  if section.settings.collection.all_products_count > section.settings.products_to_show
+  assign products_to_display = article.metafields.blog_post.related_products.value.count
+  
+  if article.metafields.blog_post.related_products.value.count > section.settings.products_to_show
     assign products_to_display = section.settings.products_to_show
     assign more_in_collection = true
   endif
@@ -57,6 +57,7 @@
     assign show_desktop_slider = true
   endif
 -%}
+
 {%- if article.metafields.blog_post.related_products.value != blank -%}
   <div class="color-{{ section.settings.color_scheme }} isolate gradient">
     <div
@@ -71,15 +72,9 @@
           </h2>
         {%- endif -%}
         {%- if section.settings.description != blank
-          or section.settings.show_description
-          and section.settings.collection.description != empty
         -%}
           <div class="collection__description {{ section.settings.description_style }} rte{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
-            {%- if section.settings.show_description -%}
-              {{ section.settings.collection.description }}
-            {%- else -%}
               {{ section.settings.description -}}
-            {%- endif %}
           </div>
         {%- endif -%}
       </div>
@@ -147,17 +142,6 @@
         {%- endif -%}
       </slider-component>
 
-      {%- if section.settings.show_view_all and more_in_collection -%}
-        <div class="center collection__view-all{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
-          <a
-            href="{{ section.settings.collection.url }}"
-            class="{% if section.settings.view_all_style == 'link' %}link underlined-link{% elsif section.settings.view_all_style == 'solid' %}button{% else %}button button--secondary{% endif %}"
-            aria-label="{{ 'sections.featured_collection.view_all_label' | t: collection_name: section.settings.collection.title | escape }}"
-          >
-            {{ 'sections.featured_collection.view_all' | t }}
-          </a>
-        </div>
-      {%- endif -%}
       {% if section.settings.image_shape == 'arch' %}
         {% render 'mask-arch' %}
       {%- endif -%}
@@ -213,12 +197,6 @@
       "label": "t:sections.featured-collection.settings.description.label"
     },
     {
-      "type": "checkbox",
-      "id": "show_description",
-      "label": "t:sections.featured-collection.settings.show_description.label",
-      "default": false
-    },
-    {
       "type": "select",
       "id": "description_style",
       "label": "t:sections.featured-collection.settings.description_style.label",
@@ -261,12 +239,6 @@
       "id": "full_width",
       "label": "t:sections.featured-collection.settings.full_width.label",
       "default": false
-    },
-    {
-      "type": "checkbox",
-      "id": "show_view_all",
-      "default": true,
-      "label": "t:sections.featured-collection.settings.show_view_all.label"
     },
     {
       "type": "select",
