ci: tailwindcss-update

--- a/assets/app.css
+++ b/assets/app.css
@@ -552,6 +552,18 @@ ul.collection-list .card__content {
   display: none;
 }
 
+/* Collapsable Row */
+
+.h4.accordion__title {
+  font-size: 24px;
+}
+
+.h4.accordion__title,
+.accordion__content {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
