--- a/assets/app.css
+++ b/assets/app.css
@@ -562,6 +562,7 @@ ul.collection-list .card__content {
 .accordion__content {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+  padding: 0px !important;
 }
 
 /*! tailwindcss v3.4.11 | MIT License | https://tailwindcss.com*/
@@ -1232,6 +1233,10 @@ ol {
   display: flex;
 }
 
+.twcss-grid {
+  display: grid;
+}
+
 .twcss-hidden {
   display: none;
 }
@@ -1242,6 +1247,14 @@ ol {
 
 .twcss-max-w-\[1440px\] {
   max-width: 1440px;
+}
+
+.twcss-list-none {
+  list-style-type: none;
+}
+
+.twcss-grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .twcss-items-start {
@@ -1258,6 +1271,10 @@ ol {
 
 .twcss-justify-between {
   justify-content: space-between;
+}
+
+.twcss-gap-8 {
+  gap: 2rem;
 }
 
 .twcss-overflow-x-auto {
@@ -1317,6 +1334,10 @@ ol {
   padding-right: 0.75rem;
 }
 
+.twcss-pt-8 {
+  padding-top: 2rem;
+}
+
 .twcss-text-right {
   text-align: right;
 }
@@ -1374,6 +1395,14 @@ ol {
 
   .md\:twcss-min-h-\[46\.8px\] {
     min-height: 46.8px;
+  }
+
+  .md\:twcss-auto-rows-fr {
+    grid-auto-rows: minmax(0, 1fr);
+  }
+
+  .md\:twcss-grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:twcss-pb-1 {
