--- a/snippets/cl-price.liquid
+++ b/snippets/cl-price.liquid
@@ -126,7 +126,7 @@
     {%- if show_badges -%}
       {%- if compare_at_price > price -%}
         {%- assign savings_percentage = compare_at_price | minus: price | times: 100.0 |  divided_by: compare_at_price | round-%}
-        <span class="badge price__badge-sale color-{{ settings.sale_badge_color_scheme }}">
+        <span class="badge price__badge-sale">
           {{ 'products.product.on_sale' | t }} {{ savings_percentage }}%
         </span>
       {%- endif -%}
@@ -139,8 +139,11 @@
 {% endunless %}
 <style>
   .price-item--sale{
-    var(--font-heading-family);
+    font-family: var(--font-heading-family);
     font-weight: 700;
     font-size: 2.5rem;
+  }
+  .price__badge-sale{
+    background-color: rgb(208,222,229);
   }
 </style>
