--- a/assets/app.css
+++ b/assets/app.css
@@ -1257,6 +1257,10 @@ ol {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.twcss-content-end {
+  align-content: flex-end;
+}
+
 .twcss-items-start {
   align-items: flex-start;
 }
@@ -1271,6 +1275,10 @@ ol {
 
 .twcss-justify-between {
   justify-content: space-between;
+}
+
+.twcss-justify-items-end {
+  justify-items: end;
 }
 
 .twcss-gap-8 {
