--- a/assets/cl-section-main-product.css
+++ b/assets/cl-section-main-product.css
@@ -220,7 +220,9 @@ product-info {
 
 /* Product info */
 
-.product__info-container > * + *:not(.product__title) {
+.product__info-container
+  > *
+  + *:not(.product__title):not(.product__attributes) {
   margin: 1.5rem 0;
 }
 
