--- a/snippets/card-ingredient.liquid
+++ b/snippets/card-ingredient.liquid
@@ -6,16 +6,18 @@
         {{ card_ingredient.description | raw }}
     </div>
     <div class="ingredients-card__benefits">
-        <h4 class="h4">Benefits:</h4>
+        <h4 class="twcss-text-black twcss-font-bold">Benefits:</h4>
         {{ card_ingredient.benefits | metafield_tag }}
     </div>
-    <div class="ingredients-card__used-in">
-        <div class="toggleLink link cursor-pointer">What it's used in</div>
-        <div class="content ingredients-card__used-in--products twcss-hidden">
-            <strong>Used in:</strong>
-            {% for product in card_ingredient.products.value %}
-                <a class="link" href="{{ product.url }}">{{ product.title }}</a>
-            {% endfor %}
+    {% if variant == 'page' %}
+        <div class="ingredients-card__used-in">
+            <div class="toggleLink link cursor-pointer">What it's used in</div>
+            <div class="content ingredients-card__used-in--products twcss-hidden">
+                <strong>Used in:</strong>
+                {% for product in card_ingredient.products.value %}
+                    <a class="link" href="{{ product.url }}">{{ product.title }}</a>
+                {% endfor %}
+            </div>
         </div>
-    </div>
+        {% endif %}
 </div>
