--- a/snippets/cl-price.liquid
+++ b/snippets/cl-price.liquid
@@ -92,7 +92,7 @@
       </div>
       <div class="price__sale">
         <span class="visually-hidden visually-hidden--inline">{{ 'products.product.price.sale_price' | t }}</span>
-        <span class="price-item price-item--sale price-item--last twcss-text-black">
+        <span class="price-item price-item--sale price-item--last">
           {{ money_price }}
         </span>
         {%- unless product.price_varies == false and product.compare_at_price_varies %}
@@ -142,6 +142,7 @@
     font-family: var(--font-heading-family);
     font-weight: 700;
     font-size: 2.5rem;
+    color: black;
   }
   .cl-price .price__badge-sale{
     background-color: rgb(208,222,229);
