--- a/sections/cl-related-products.liquid
+++ b/sections/cl-related-products.liquid
@@ -31,6 +31,9 @@
       <h2 class="related-products__heading inline-richtext {{ section.settings.heading_size }}">
         {{ section.settings.heading }}
       </h2>
+      <p>
+        {{ section.settings.text }}
+      </p>
       <ul
         class="grid product-grid grid--{{ section.settings.columns_desktop }}-col-desktop grid--{{ section.settings.columns_mobile }}-col-tablet-down"
         role="list"
@@ -38,7 +41,7 @@
         {% assign skip_card_product_styles = false %}
         {% for recommendation in recommendations.products %}
           <li class="grid__item">
-            {% render 'card-product',
+            {% render 'cl-card-product',
               card_product: recommendation,
               media_aspect_ratio: section.settings.image_ratio,
               image_shape: section.settings.image_shape,
@@ -60,7 +63,7 @@
 
 {% schema %}
 {
-  "name": "t:sections.related-products.name",
+  "name": "CL Related products",
   "tag": "section",
   "class": "section",
   "settings": [
@@ -101,6 +104,12 @@
       ],
       "default": "h1",
       "label": "t:sections.all.heading_size.label"
+    },
+    {
+      "type": "inline_richtext",
+      "id": "text",
+      "default": "t:sections.related-products.settings.paragraph__1.default",
+      "label": "t:sections.related-products.settings.heading.label"
     },
     {
       "type": "range",
