Latest liquid templates

--- a/sections/cl-related-products.liquid
+++ b/sections/cl-related-products.liquid
@@ -28,10 +28,10 @@
     data-product-id="{{ product.id }}"
   >
     {% if recommendations.performed and recommendations.products_count > 0 %}
-      <h2 class="related-products__heading inline-richtext {{ section.settings.heading_size }}">
+      <h2 class="related-products__heading inline-richtext twcss-text-center twcss-text-black twcss-font-bold">
         {{ section.settings.heading }}
       </h2>
-      <p>
+      <p class="twcss-text-center">
         {{ section.settings.text }}
       </p>
       <ul
