--- a/sections/cl-main-product.liquid
+++ b/sections/cl-main-product.liquid
@@ -510,7 +510,7 @@
                 %}
 
               {%- when 'variant_picker' -%}
-                {% render 'product-variant-picker', product: product, block: block, product_form_id: product_form_id %}
+                {% render 'cl-product-variant-picker', product: product, block: block, product_form_id: product_form_id %}
               {%- when 'rating' -%}
                 {%- if product.metafields.reviews.rating.value != blank -%}
                   <div class="rating-wrapper">
