--- a/snippets/cl-product-variant-options.liquid
+++ b/snippets/cl-product-variant-options.liquid
@@ -22,6 +22,7 @@
 
 {%- for value in option.values -%}
   {%- liquid
+    assign option_downcase = option.name | downcase
     assign swatch_focal_point = null
     if value.swatch.image
       assign image_url = value.swatch.image | image_url: width: 50
@@ -76,23 +77,15 @@
       help_text: help_text,
       additional_props: input_dataset
     %}
-  {%- elsif picker_type == 'button' and option.name == 'shade'-%}
-    <input
-      type="radio"
-      id="{{ input_id }}"
-      name="{{ input_name | escape }}"
-      value="{{ value | escape }}"
-      form="{{ product_form_id }}"
-      {% if value.selected %}
-        checked
-      {% endif %}
-      {% if option_disabled %}
-        class="disabled"
-      {% endif %}
-      {{ input_dataset }}
-    >
-    <label style="background-color: {{value}}; " for="{{ input_id }}">
-    </label>
+    {%- elsif picker_type == 'button' and option_downcase == 'shade'-%}
+    {% render 'cl-shade-swatch',
+      input_id: input_id,
+      input_name: input_name,
+      value: value,
+      product_form_id: product_form_id,
+      option_disabled: option_disabled,
+      input_dataset: input_dataset,
+    %}
   {%- elsif picker_type == 'button' -%}
     <input
       type="radio"
@@ -108,7 +101,7 @@
       {% endif %}
       {{ input_dataset }}
     >
-    <label style="background-color: {{value}};" for="{{ input_id }}">
+    <label for="{{ input_id }}">
       {{ value -}}
       {{ label_unavailable }}
     </label>
