--- a/assets/cl-section-main-product.css
+++ b/assets/cl-section-main-product.css
@@ -1006,7 +1006,7 @@ a.product__text {
 @media screen and (min-width: 750px) {
   .product--thumbnail_slider .thumbnail-slider {
     display: flex;
-    align-items: center;
+    align-items: start;
   }
 
   .thumbnail-slider .thumbnail-list.slider--tablet-up {
@@ -1021,7 +1021,7 @@ a.product__text {
   }
 
   .thumbnail-list.slider--tablet-up .thumbnail-list__item.slider__slide {
-    width: calc(25% - 0.8rem);
+    width: calc(100% - 0.8rem);
   }
 
   .product--thumbnail_slider .slider-mobile-gutter .slider-button {
@@ -1033,7 +1033,7 @@ a.product__text {
   .product--small
     .thumbnail-list.slider--tablet-up
     .thumbnail-list__item.slider__slide {
-    width: calc(25% - 0.8rem);
+    width: calc(100% - 0.8rem);
   }
 
   .thumbnail-list.slider--tablet-up .thumbnail-list__item.slider__slide {
