--- a/snippets/cl-shade-swatch.liquid
+++ b/snippets/cl-shade-swatch.liquid
@@ -15,7 +15,6 @@
   {% elsif color_to_find == "light" %}
     {% assign hex_code = light_hex %}
   {% endif %}
-
 <input
     type="radio"
     id="{{ input_id }}"
@@ -31,6 +30,6 @@
     {{ input_dataset }}
 >
 <label for="{{ input_id }}">
-    <span class="cl-swatch twcss-block twcss-h-16 twcss-w-16" style="background-color: {{ hex_code }};"> </span>
+    <span class="cl-swatch" style="background-color: {{ hex_code }};"> </span>
     <span>{{ value }}</span>
 </label>
