--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -103,12 +103,13 @@
   background-color: transparent;
   border: 0;
   border-radius: 0;
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   height: auto;
   line-height: calc(1 + 0.5 / var(--font-body-scale));
   margin: 0;
   padding-left: 0;
   padding-right: 1.75rem;
+  font-weight: 700;
 }
 
 .facet-filters__sort + .icon-caret {
@@ -179,8 +180,7 @@
 
 .facets__heading {
   display: block;
-  color: rgba(var(--color-foreground), 0.85);
-  font-size: 1.4rem;
+  font-size: 2rem;
   margin: -1.5rem 2rem 0 0;
 }
 
@@ -194,9 +194,10 @@
 
 .facets__summary {
   color: rgba(var(--color-foreground), 0.75);
-  font-size: 1.4rem;
+  font-size: 1.7rem;
   padding: 0 1.75rem 0 0;
   margin-bottom: 1.5rem;
+  font-weight: 700;
 }
 
 .facets__disclosure fieldset {
@@ -1105,9 +1106,10 @@ input.mobile-facets__checkbox {
 }
 
 .product-count__text {
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   line-height: calc(1 + 0.5 / var(--font-body-scale));
   margin: 0;
+  font-weight: 700;
 }
 
 #ProductCountDesktop.loading,
@@ -1154,12 +1156,12 @@ input.mobile-facets__checkbox {
 
   .facets__heading--vertical {
     margin: 0 0 1.5rem 0;
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   .facets__header-vertical {
     padding: 1.5rem 2rem 1.5rem 0;
-    font-size: 1.4rem;
+    font-size: 2.8rem;
   }
 
   .facets__display-vertical {
