Allowed another block

--- a/sections/cl-collage.liquid
+++ b/sections/cl-collage.liquid
@@ -403,10 +403,10 @@
       ]
     }
   ],
-  "max_blocks": 3,
+  "max_blocks": 4,
   "presets": [
     {
-      "name": "t:sections.collage.presets.name",
+      "name": "CL Collage",
       "blocks": [
         {
           "type": "image"
